--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "react-frontend-challenge-pagination",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
